<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:fillViewport="true"
    tools:context=".ui.main.dashboard.portfolio.add_portfolio.AddPortfolioFirstFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/tv_uploadImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="29dp"
            android:fontFamily="@font/inter"
            android:text="Deskripsi Diri"
            android:textColor="@color/black_text_1"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_selfDescription"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_textinput_transparent"
            android:gravity="top"
            android:hint="@string/et_selfDescription"
            android:inputType="textLongMessage"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_uploadImage" />

        <TextView
            android:id="@+id/tv_header_selfDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/inter"
            android:text="Deskripsi Projek"
            android:textColor="@color/black_text_1"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_selfDescription" />

        <EditText
            android:id="@+id/et_projectDescription"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_textinput_transparent"
            android:gravity="top"
            android:hint="@string/et_projectDescription"
            android:inputType="textLongMessage"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_header_selfDescription" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_next"
            style="@style/style_buttonSecondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_projectDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>